# Thermal_Perimeter_Intrusion_Detection

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: config.yaml  dataset.yaml  inference.yaml  model.yaml  training.yaml
docs/: architecture.md  dataset.md  experiments.md  preprocessing.md  references.md
notebooks/: 01_environment_and_dataset.ipynb  02_dataset_analysis.ipynb  03_preprocessing.ipynb  04_model.ipynb  05_training.ipynb  06_evaluation.ipynb  07_inference.ipynb
reports/: dataset_analysis_report.md  dataset_intake_report.md  evaluation_report.md  experiment_report.md  inference_report.md  model_report.md  preprocessing_report.md  training_report.md
scripts/: download_dataset.py  evaluate.py  export.py  inference.py  train.py
src/datasets/: preprocessing.py
src/evaluation/: statistics.py  visualize.py
src/inference/: batch_predict.py  export.py  predictor.py
src/models/: model_factory.py  yolov8.py
