[project]
name = "thermal-ai-project"
version = "0.1.0"
description = "Thermal imaging AI pipeline: dataset intake, training, evaluation, inference"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
